# krainode-rpc-proxy

./: .gitignore  CHANGELOG.md  Caddyfile  Dockerfile  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  chains.yaml  docker-compose-dev.yml  docker-compose.yml  env.dev.example  env.example  grafana-dashboard.json  package-lock.json  package.json  prometheus.yml  supabase_bootstrap.sql  vercel.json
.github/: FUNDING.yml  pull_request_template.md
backend/: Dockerfile  chains.yaml  pyproject.toml  uvicorn_conf.py
backend/app/: __init__.py  auth.py  config.py  db.py  deps.py  logging.py  main.py  metrics.py  rate_limit.py  rpc.py
backend/app/handlers/: rpc.py
backend/app/routers/: rpc.py
backend/app/routes/: auth_echo.py  history.py
backend/app/schemas/: rpc.py
backend/tests/: __init__.py  test_api.py
web/: README.md  env.example  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
web/public/: chains.json  site.webmanifest
web/scripts/: build-chains-json.mjs
web/src/: App.tsx  index.css  main.tsx  providerMap.ts
web/src/components/: Callout.tsx  ChainSelect.tsx  CodeTabs.tsx  CopyButton.tsx  DocsCodeTabs.tsx  DocsSidebar.tsx  Header.tsx  JsonEditor.tsx  JsonViewer.tsx  MethodSelect.tsx  NavBar.tsx  NetworkSelect.tsx  Presets.tsx  ProtectedRoute.tsx  ProviderSelect.tsx  ProviderSpotlight.tsx  TeamCard.tsx  ThemeProvider.tsx  TimeoutErrorCard.tsx  layout.tsx
web/src/data/: stats.ts  team.ts
web/src/hooks/: useBearer.ts
web/src/lib/: api.ts  probe.ts  providerMatch.ts  rpc.ts
web/src/pages/: About.tsx  (+7 more)
